2002-02-14  Chris Lyttle    <chris@wilddev.net>

	* help/C/gnotravex.xml : move to XML.

	* help/C/gnotravex-C.omf : move to XML.

	* help/C/gnotravex.sgml : deleted, move to XML.

	* help/C/Makefile.am : move to XML.

2002-02-02  Zbigniew Chyla  <cyba@gnome.pl>

	* gnotravex.c (about_cb): Don't try to translate empty string.

2002-01-20  Juan Pablo Mendoza <jpablo@gnome.org>

	Patch from Andreas Simon <yuipx@web.de>

	gnotravex.c: Remove some deprecated functions and
	reduce flickering when changuing board size.

2002-01-03  Josh Barrow  <drleary@mac.com>

	* Makefile.am:
	* gnotravex.c: (main), (create_window), (create_space):

2001-12-31  Josh Barrow  <drleary@mac.com>

	* gnotravex.c: (expose_space), (gui_draw_pixmap), (setup_mover),
	(create_space), (create_mover), (load_image), (get_bg_color),
	(make_buffer), (quit_game_cb), (nstr):
	Changed to not use deprecated functions.

2001-12-23  Mark McLoughlin  <mark@skynet.ie>

	* gnotravex.c: port from GtkClock to GamesClock.

	* Makefile.am: upd.

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnotravex.desktop:

	Install into the correct location and add a Categories
	field.
	
2001-12-04  Duarte Loreto <happyguy_pt@hotmail.com>

        * gnotravex.desktop: Added Portuguese (pt) translation.

2001-07-27  Abel Cheung  <maddog@linux.org.hk>

	* gnotravex.desktop: Added traditional Chinese translation.

2001-06-16  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* gnotravex.c: See you in hell imlib.

2001-06-03  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* gnotravex.c (main): Don't try to free the gnome_master_client to
	  silent a gtk warning on exit.

2001-05-28  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* gnotravex.c: Made the game area unsensitive when whe are moving
	  parts automaticaly, fix bug #2998.

1999-09-25  Ian Peters  <itp@gnu.org>

	* Makefile.am: Added a missing \, which caused $(INTLLIBS) not to be
	  added to the link line, breaking it on IRIX (I'm told...).  Thanks to