@@ -4,7 +4,7 @@ figs = \
 docname = gnotravex
 lang = C
 omffile = gnotravex-C.omf
-entities = 
+entities = legal.xml
 include $(top_srcdir)/xmldocs.make
 dist-hook: app-dist-hook
 
