@@ -1,45 +1,110 @@
 <?xml version="1.0"?>
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
     "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
-<!ENTITY version "1.0.53">
-<!-- Template Version: 1.0.1 (do not remove this line) -->
+  <!ENTITY legal SYSTEM "legal.xml">
+  <!ENTITY appversion "2.0">
+  <!ENTITY manrevision "2.0">
+  <!ENTITY date "March 2002">
+  <!ENTITY app "<application>GNOME Tetravex</application>">
+  <!ENTITY appname "GNOME Tetravex">
+  <!ENTITY version "1.0.53">
 ]>
 
-
-<article id="index">
-
+<!-- 
+      (Do not remove this comment block.)
+  Maintained by the GNOME Documentation Project
+  http://developer.gnome.org/projects/gdp
+  Template version: 2.0 beta
+  Template last modified Feb 12, 2002
+-->
+<!-- =============Document Header ============================= -->
+<article id="index" lang="en">
+<!-- please do not change the id; for translations, change lang to -->
+<!-- appropriate code -->
  <articleinfo>
-  <title>GNOME Tetravex Manual</title>
+  <title>&app; Manual V&manrevision;</title>
   <copyright>
    <year>2001</year>
    <holder>Rob Bradford </holder>
   </copyright>
+<!-- translators: uncomment this:
 
-  <legalnotice id="legalnotice"> 
-   <para> 
-     Permission is granted to copy, distribute and/or
-     modify this document under the terms of the <citetitle>GNU Free
-     Documentation License</citetitle>, Version 1.1 or any later version
-     published by the Free Software Foundation with no Invariant
-     Sections, no Front-Cover Texts, and no Back-Cover Texts. You may
-     obtain a copy of the <citetitle>GNU Free Documentation
-     License</citetitle> from the Free Software Foundation by visiting
-     <ulink url="http://www.fsf.org" type="http">their Web site</ulink>
-     or by writing to: Free Software Foundation, Inc., 59 Temple Place -
-     Suite 330, Boston, MA 02111-1307, USA.
-   </para>
-   <para>
-     Many of the names used by companies to distinguish their products
-     and services are claimed as trademarks. Where those names appear in
-     any GNOME documentation, and those trademarks are made aware to the
-     members of the GNOME Documentation Project, the names have been
-     printed in caps or initial caps.
-   </para>
-  </legalnotice>
+  <copyright>
+   <year>2002</year>
+   <holder>ME-THE-TRANSLATOR (Latin translation)</holder>
+  </copyright>
 
-  <releaseinfo>This is version 1.0 of GNOME Tetravex manual.  </releaseinfo>
+   -->
+<!-- An address can be added to the publisher information.  If a role is 
+     not specified, the publisher/author is the same for all versions of the 
+     document.  -->
+    <publisher> 
+      <publishername> GNOME Documentation Project </publishername> 
+    </publisher> 
+
+   &legal;
+   <!-- This file  contains link to license for the documentation (GNU FDL), and 
+        other legal stuff such as "NO WARRANTY" statement. Please do not change 
+	any of this. -->
+
+    <authorgroup> 
+      <author> 
+	<firstname>Rob</firstname> 
+	<surname>Bradford</surname> 
+	<affiliation> 
+	  <address> <email>rob@funky-penguin.co.uk</email> </address> 
+	</affiliation> 
+      </author> 
+<!-- This is appropriate place for other contributors: translators,
+      maintainers,  etc. Commented out by default.
+       <othercredit role="translator">
+	<firstname>Latin</firstname> 
+	<surname>Translator 1</surname> 
+	<affiliation> 
+	  <orgname>Latin Translation Team</orgname> 
+	  <address> <email>translator@gnome.org</email> </address> 
+	</affiliation>
+	<contrib>Latin translation</contrib>
+      </othercredit>
+-->
+    </authorgroup>
+
+    <revhistory>
+      <revision> 
+	<revnumber>&appname; Manual V&manrevision;</revnumber> 
+	<date>&date;</date> 
+	<revdescription> 
+	  <para role="author">Rob Bradford
+	    <email>rob@funky-penguin.co.uk</email>
+	  </para>
+	  <para role="publisher">GNOME Documentation Project</para>
+	</revdescription> 
+      </revision> 
+    </revhistory> 
+
+    <releaseinfo>This manual describes version &appversion; of &appname;.
+    </releaseinfo>
+    <!-- The following feedback information only applies to appliactions
+    listed in bugzilla.gnome.org and bugzilla.ximian.com. For other
+    applications, please provide your own feedback info or remove thsi
+    section altogether -->
+    <legalnotice> 
+      <title>Feedback</title> 
+      <para>To report a bug or make a suggestion regarding the &app; application or
+	this manual, follow the directions in the 
+	<ulink url="ghelp:gnome-feedback"
+	  type="help">GNOME Feedback Page</ulink>. 
+      </para>
+<!-- Translators may also add here feedback address for translations -->
+    </legalnotice> 
  </articleinfo>
 
+  <indexterm zone="index"> 
+    <primary>GNOME Tetravex</primary> 
+  </indexterm>
+
+<!-- ============= Document Body ============================= -->
+<!-- ============= Introduction ============================== -->
  <sect1 id="intro">
   <title>Introduction</title>
 
